# kube_certmanager

./: .ansible-lint  .gitignore  .travis.yml  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements-monorepo.yml  requirements.txt  tox.ini
.ansible/collections/ansible_collections/tcharl/kube_certmanager/: .ansible-lint  .travis.yml  .yamllint  FILES.json  MANIFEST.json  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.ansible/collections/ansible_collections/tcharl/kube_certmanager/.github/workflows/: molecule.yml  (+1 more)
.ansible/collections/ansible_collections/tcharl/kube_certmanager/defaults/: main.yml
.ansible/collections/ansible_collections/tcharl/kube_certmanager/files/: cert-manager-values.yml
.ansible/collections/ansible_collections/tcharl/kube_certmanager/meta/: main.yml
.ansible/collections/ansible_collections/tcharl/kube_certmanager/tasks/: cert-manager.yml  install-cmctl.yml  kubernetes.yml  tsig-facts.yml  tsig.yml
.github/workflows/: molecule.yml
defaults/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml
molecule/default/tests/: test_master.py
molecule/kvm/: ansible.cfg  converge.yml  molecule.yml  prepare.yml
molecule/parallels/: ansible.cfg  converge.yml  molecule.yml  prepare.yml
tasks/: assert.yml  cert-manager.yml  idm.yml  install-cmctl.yml  ipa-facts.yml  kubernetes.yml  main.yml  requirements.yml  tsig-facts.yml  tsig.yml
templates/acme_issuer/: cluster-issuer.yml.j2
templates/freeipa-issuer/: certmanager_clusterissuer.yaml.j2  secret.yaml.j2
vars/: main.yml
(+8 files in other folders)
