[project]
name = "tcharl.kube_certmanager"
version = "2.1.0"
description = "Installs cert-manager on Kubernetes"
authors = [{name = "Charlie Mordant", email = "cmordant1@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ansible>=11.5.0",
    "jmespath>=1.0.1",
    "netaddr>=1.3.0",
    "kubernetes",
]

[dependency-groups]
dev = [
    "flake8",
    "yamllint",
    "tox",
    "pytest-testinfra",
    "python-vagrant",
    "molecule>=24.0.0,<25.0",
    "molecule-plugins[vagrant]",
    'ansible-lint==26.4.0 ; platform_system != "Windows"',
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meta"]

[tool.hatch.build.targets.sdist]
include = [
    "/defaults",
    "/files",
    "/handlers",
    "/meta",
    "/tasks",
    "/templates",
    "/vars",
]
